force-app/main/default/objects/Berechnungsemails__c/Berechnungsemails__c.object-meta.xml
<CustomObject>
    <label>Berechnungsemail</label>
    <nameField>
        <label>Berechnungsemails-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Berechnungsemails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>