force-app/main/default/objects/Berechnungsemails__c/fields/An_E_Mail__c.field-meta.xml
<CustomField>
    <fullName>An_E_Mail__c</fullName>
    <label>An E-Mail</label>
    <type>Email</type>
</CustomField>