force-app/main/default/objects/Berechnungsemails__c/fields/Benachrichtigung_an__c.field-meta.xml
<CustomField>
    <fullName>Benachrichtigung_an__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benachrichtigung an</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Berechnungsemails</relationshipLabel>
    <relationshipName>Berechnungsemails</relationshipName>
    <type>Lookup</type>
</CustomField>