force-app/main/default/objects/Berechnungsemails__c/fields/Berechnungsmakler__c.field-meta.xml
<CustomField>
    <fullName>Berechnungsmakler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Berechnungsmakler</label>
    <referenceTo>Realty_User__c</referenceTo>
    <relationshipLabel>Berechnungsemails</relationshipLabel>
    <relationshipName>Berechnungsemails</relationshipName>
    <type>Lookup</type>
</CustomField>