force-app/main/default/objects/Berechnungsemails__c/fields/Externe__c.field-meta.xml
<CustomField>
    <fullName>Externe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Es handelt sich um einen externen Makler, welcher nicht in direkter Beziehung zum Kunden steht</description>
    <inlineHelpText>Es handelt sich um einen externen Makler, welcher nicht in direkter Beziehung zum Kunden steht</inlineHelpText>
    <label>Externe</label>
    <type>Checkbox</type>
</CustomField>