force-app/main/default/objects/Berechnungsemails__c/fields/Immo_Berechnung__c.field-meta.xml
<CustomField>
    <fullName>Immo_Berechnung__c</fullName>
    <label>Immo Berechnung</label>
    <referenceTo>Calculation__c</referenceTo>
    <relationshipLabel>Berechnungsemails</relationshipLabel>
    <relationshipName>Berechnungsemails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>