force-app/main/default/objects/Berechnungsemails__c/fields/Kunde__c.field-meta.xml
<CustomField>
    <fullName>Kunde__c</fullName>
    <label>Kunde</label>
    <length>80</length>
    <type>Text</type>
</CustomField>